force-app/main/default/objects/PublicAccessTest__c/PublicAccessTest__c.object-meta.xml
<CustomObject>
    <description>Tests that the Dog/Client team can perform in public.</description>
    <label>PAT</label>
    <nameField>
        <displayFormat>PAT-{0000}</displayFormat>
        <label>Public Access Test Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>PATs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>