force-app/main/default/objects/PublicAccessTest__c/fields/Assessor__c.field-meta.xml
<CustomField>
    <fullName>Assessor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Person assessing the team</description>
    <label>Assessor</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>Public_Access_Tests_Assessor</relationshipName>
    <type>Lookup</type>
</CustomField>