force-app/main/default/objects/PublicAccessTest__c/fields/AssessorComments__c.field-meta.xml
<CustomField>
    <fullName>AssessorComments__c</fullName>
    <description>Comments from the person assessing the team</description>
    <label>Assessor Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>