force-app/main/default/objects/PublicAccessTest__c/fields/Client__c.field-meta.xml
<CustomField>
    <fullName>Client__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Client being assessed in the PAT</description>
    <label>Client</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>PATs (Client)</relationshipLabel>
    <relationshipName>Public_Access_Tests</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>