force-app/main/default/objects/PublicAccessTest__c/fields/DateCompleted__c.field-meta.xml
<CustomField>
    <fullName>DateCompleted__c</fullName>
    <description>Date the test was completed</description>
    <label>Date Completed</label>
    <required>true</required>
    <type>Date</type>
</CustomField>