force-app/main/default/objects/PublicAccessTest__c/fields/Dog__c.field-meta.xml
<CustomField>
    <fullName>Dog__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Dog in the PAT team</description>
    <label>Dog</label>
    <referenceTo>Dog__c</referenceTo>
    <relationshipLabel>PATs</relationshipLabel>
    <relationshipName>Public_Access_Tests</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>