force-app/main/default/objects/PublicAccessTest__c/fields/Instance__c.field-meta.xml
<CustomField>
    <fullName>Instance__c</fullName>
    <description>Number of Public Access Tests this team has taken</description>
    <label>Instance</label>
    <precision>4</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>