force-app/main/default/objects/PublicAccessTest__c/fields/ReviewComments__c.field-meta.xml
<CustomField>
    <fullName>ReviewComments__c</fullName>
    <description>Comments made by the client</description>
    <label>Review Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>