force-app/main/default/objects/PublicAccessTest__c/fields/Team__c.field-meta.xml
<CustomField>
    <fullName>Team__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Team the test is for</description>
    <label>Team</label>
    <referenceTo>Team__c</referenceTo>
    <relationshipLabel>PATs</relationshipLabel>
    <relationshipName>PATs</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>