force-app/main/default/objects/PublicAccessTest__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>Type of Public Access Test</description>
    <label>Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Initial</fullName>
            </value>
            <value>
                <fullName>Recertification</fullName>
            </value>
            <value>
                <fullName>Retest</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>