force-app/main/default/objects/PublicAccessTest__c/fields/ValidUntil__c.field-meta.xml
<CustomField>
    <fullName>ValidUntil__c</fullName>
    <description>Date the test is valid until</description>
    <label>Valid Until</label>
    <type>Date</type>
</CustomField>