force-app/main/default/objects/PublicAccessTest__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>DateCompleted__c</columns>
    <columns>Status__c</columns>
    <columns>Team__c</columns>
    <columns>ValidUntil__c</columns>
    <columns>Assessor__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>